[package]
name = "fsren"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z" # optimize for size
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
walkdir = "2.5.0"
once_cell = "1.20.2"
#regex = "1.3.1"

# regex size optimization https://crates.io/crates/regex
[dependencies.regex]
version = "1.3.1"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]
